@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2017 the original author or authors.
+ * Copyright 2012-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -36,28 +36,22 @@ import static org.assertj.core.api.Assertions.assertThat;
 public class JarLauncherTests extends AbstractExecutableArchiveLauncherTests {
 
 	@Test
-	public void explodedJarHasOnlyBootInfClassesAndContentsOfBootInfLibOnClasspath()
-			throws Exception {
+	public void explodedJarHasOnlyBootInfClassesAndContentsOfBootInfLibOnClasspath() throws Exception {
 		File explodedRoot = explode(createJarArchive("archive.jar", "BOOT-INF"));
 		JarLauncher launcher = new JarLauncher(new ExplodedArchive(explodedRoot, true));
 		List<Archive> archives = launcher.getClassPathArchives();
 		assertThat(archives).hasSize(2);
-		assertThat(getUrls(archives)).containsOnly(
-				new File(explodedRoot, "BOOT-INF/classes").toURI().toURL(),
-				new URL("jar:"
-						+ new File(explodedRoot, "BOOT-INF/lib/foo.jar").toURI().toURL()
-						+ "!/"));
+		assertThat(getUrls(archives)).containsOnly(new File(explodedRoot, "BOOT-INF/classes").toURI().toURL(),
+				new URL("jar:" + new File(explodedRoot, "BOOT-INF/lib/foo.jar").toURI().toURL() + "!/"));
 	}
 
 	@Test
-	public void archivedJarHasOnlyBootInfClassesAndContentsOfBootInfLibOnClasspath()
-			throws Exception {
+	public void archivedJarHasOnlyBootInfClassesAndContentsOfBootInfLibOnClasspath() throws Exception {
 		File jarRoot = createJarArchive("archive.jar", "BOOT-INF");
 		JarLauncher launcher = new JarLauncher(new JarFileArchive(jarRoot));
 		List<Archive> archives = launcher.getClassPathArchives();
 		assertThat(archives).hasSize(2);
-		assertThat(getUrls(archives)).containsOnly(
-				new URL("jar:" + jarRoot.toURI().toURL() + "!/BOOT-INF/classes!/"),
+		assertThat(getUrls(archives)).containsOnly(new URL("jar:" + jarRoot.toURI().toURL() + "!/BOOT-INF/classes!/"),
 				new URL("jar:" + jarRoot.toURI().toURL() + "!/BOOT-INF/lib/foo.jar!/"));
 	}
 
